--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Information System Designer | Home
                 title="Analysez, concevez, partagez !" 
                 desc="Un outil open-source complet pour décrire visuellement les applications de votre système d’information."                
                 
-                href_1="download.html"
+                href_1="https://github.com/ObeoNetwork/InformationSystem/releases"
                 btn_txt_1="C'est parti"
                 target_1="self"
                 href_2="https://github.com/ObeoNetwork/InformationSystem/wiki"      
