--- a/cinematic.html
+++ b/cinematic.html
@@ -36,7 +36,7 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
             col="3"
             icon_name="far fa-file-alt"
             icon_color="txt_indigo"
-            title="Approche visuelle et innovante !"
+            title="Approche visuelle et innovante XXX"
             desc="Une schéma vaut mieux qu'un long discours : les diagrammes permettent de mieux réfléchir en restant focalisé sur l'essentiel."
             href=""
             target="_blank"
