--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -8,8 +8,10 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             {% include block_heading.html
                 title="Fonctionnalités"                
                 sub_title="Un atelier de modélisation complet<br>pour concevoir vos applications de gestion"
-                desc="IS Designer est  un atelier de modélisation graphique et collaboratif qui couvre l’ensemble des besoins d’analyse et de conception d’applications de gestion :<br>
-                de la structure et de la cinématique des écrans jusqu’à la base de données, en passant par la couche de services et les objets métiers"
+                desc="IS Designer est  un atelier de modélisation graphique et collaboratif<br>
+                qui couvre l’ensemble des besoins d’analyse et de conception d’applications de gestion :<br>
+                de la structure et de la cinématique des écrans jusqu’à la base de données,<br>
+                en passant par la couche de services et les objets métiers"
             %}
     </div>
 </section>
