--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -16,25 +16,6 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" class="bg_lightest_grey">
-    <div class="container">
-        {% include block_text_image.html
-            txt_order="order-1"
-            title="Intégration des applications et bases de données existantes"                
-            desc="<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>"
-        
-            lnk_txt=""
-            lnk_href=""
-            lnk_target=""
-            lnk_icon=""
-
-            img_order="order-2"
-            img_src="images/illustrations/sirius-overview.png"
-            img_title="Information System Designer - What is Information System Designer?"
-        %}
-    </div>
-</section>
-
 <section id="">
     <div class="container">
         {% include block_text_image.html
@@ -48,7 +29,31 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             lnk_icon=""
 
             img_order="order-1"
-            img_src="images/illustrations/sirius-overview.png"
+            img_src="images/screenshots/cinematic.png"
+            img_title="Information System Designer - What is Information System Designer?"
+        %}
+    </div>
+</section>
+
+<section id="" class="bg_lightest_grey">
+    <div class="container">
+        {% include block_text_image.html
+            txt_order="order-1"
+            title="Intégration des applications et bases de données existantes"                
+            desc="<p>Une nouvelle application fait généralement partie d'un système d'information composé de nombreuses autres applications.</p>
+            <p>Avec IS Designer, vous facilement vous intégrer avec les applications existantes en rétromodélisant automatiquement :
+            <ul>
+                <li>les schémas de bases de données via Liquibase</li>
+                <li>les services décrits avec le standard OpenAPI</li>
+            </ul>"
+            </p>
+            lnk_txt=""
+            lnk_href=""
+            lnk_target=""
+            lnk_icon=""
+
+            img_order="order-2"
+            img_src="images/logos/logos-liquibase-openapi.png"
             img_title="Information System Designer - What is Information System Designer?"
         %}
     </div>
