--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -83,7 +83,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         {% include block_text_image.html
             txt_order="order-2"
             title="Génération automatique de code"                
-            desc="<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>"
+            desc="<p>&Agrave; partir des informations modélisées, il est possible de générer une partie du code source deset des fichiers de configuration de l'application.</p>
+            <p>Des générateurs prêts à l'emploi existent pour cibler le langage Java. Mais grâce à la technologie Acceleo sur laquelle s'appuie IS Designer, il est possible de définir vos propres templates pour produire automatiquent du code pour tout autre type de langage."
         
             lnk_txt="Générateurs de code"
             lnk_href=""
@@ -91,8 +92,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             lnk_icon="fas fa-arrow-alt-circle-right"
 
             img_order="order-1"
-            img_src="images/illustrations/sirius-overview.png"
-            img_title="Information System Designer - What is Information System Designer?"
+            img_src="images/illustrations/acceleo_overview.png"
+            img_title="Acceleo code generation"
         %}
     </div>
 </section>
@@ -110,8 +111,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             lnk_icon=""
 
             img_order="order-2"
-            img_src="images/illustrations/sirius-overview.png"
-            img_title="Information System Designer - What is Information System Designer?"
+            img_src="images/illustrations/obeodesigner-collaborate.png"
+            img_title="Obeo Designer Team"
         %}
     </div>
 </section>
@@ -129,8 +130,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             lnk_icon=""
 
             img_order="order-1"
-            img_src="images/illustrations/sirius-overview.png"
-            img_title="Information System Designer - What is Information System Designer?"
+            img_src="images/logos/logo-github.png"
+            img_title="Github"
         %}
     </div>
 </section>
@@ -148,8 +149,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             lnk_icon=""
 
             img_order="order-2"
-            img_src="images/illustrations/sirius-overview.png"
-            img_title="Information System Designer - What is Information System Designer?"
+            img_src="images/illustrations/no-uml.png"
+            img_title="No UML"
         %}
     </div>
 </section>
