--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -29,8 +29,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             lnk_icon=""
 
             img_order="order-1"
-            img_src="images/screenshots/cinematic.png"
-            img_title="Information System Designer - What is Information System Designer?"
+            img_src="images/screenshots/cinematic/cinematic.png"
+            img_title="Diagramme de cinématique applicative"
         %}
     </div>
 </section>
@@ -45,8 +45,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             <ul>
                 <li>les schémas de bases de données via Liquibase</li>
                 <li>les services décrits avec le standard OpenAPI</li>
-            </ul>"
-            </p>
+            </ul>
+            </p>"
             lnk_txt=""
             lnk_href=""
             lnk_target=""
@@ -54,7 +54,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 
             img_order="order-2"
             img_src="images/logos/logos-liquibase-openapi.png"
-            img_title="Information System Designer - What is Information System Designer?"
+            img_title="Liquibase et OpenAPI"
         %}
     </div>
 </section>
@@ -73,7 +73,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 
             img_order="order-2"
             img_src="images/illustrations/sirius-overview.png"
-            img_title="Information System Designer - What is Information System Designer?"
+            img_title="Génération de documents avec M2Doc"
         %}
     </div>
 </section>
@@ -93,7 +93,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 
             img_order="order-1"
             img_src="images/illustrations/acceleo_overview.png"
-            img_title="Acceleo code generation"
+            img_title="Génération de code avec Acceleo"
         %}
     </div>
 </section>
