--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -17,7 +17,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 </section>
 
 <section id="">
-    <div class="container" class="bg_lightest_grey">
+    <div class="bg_lightest_grey">
         {% include block_text_image.html
             txt_order="order-1"
             title="Représentation visuelle"                
