--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -16,8 +16,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="">
-    <div class="bg_lightest_grey">
+<section id=""  class="bg_lightest_grey">
+    <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
             title="Représentation visuelle"                
