--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -16,6 +16,12 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
+<section id="" class="text-center">
+    <div class="container">
+        <img src="images/banners/banner_modelers.jpg">
+    </div>
+</section>
+
 <section id=""  class="bg_lightest_grey">
     <div class="container">
         {% include block_text_image.html
