--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -17,20 +17,24 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 </section>
 
 <section id="" class="text-center" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
-    <div >
+    <div class="container">
         <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
+        <div class=class="col-md-6">
         <h3>Requirements Designer</h3
         <p>Modéliser les exigences liées à l’application</p>
         <h3>Graal Designer</h3>
         <p>Modéliser les besoins utilisateurs</p> 
         <h3>SOA Designer</h3>
         <p>Modéliser les interfaces de composants applicatifs</p>
+        </div>
+        <div class=class="col-md-6">
         <h3>Entity Designer</h3>
         <p>Modéliser les structures de données</p>
         <ph3>Database Designer</h3>
         <p>Modéliser une base de données relationnelle</p>
         <h3>Cinematic Designer</h3>
         <p>Modéliser vos IHM</p>
+        </div>
 
     </div>
 </section>
