--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -19,7 +19,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 <section id="" class="text-center" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
     <div class="container">
         <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
-        <div class=class="col-md-6">
+        <div class="row"
+        <div class="col-md-6 text-left">
         <h3>Requirements Designer</h3
         <p>Modéliser les exigences liées à l’application</p>
         <h3>Graal Designer</h3>
@@ -27,7 +28,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         <h3>SOA Designer</h3>
         <p>Modéliser les interfaces de composants applicatifs</p>
         </div>
-        <div class=class="col-md-6">
+        <div class="col-md-6 text-left">
         <h3>Entity Designer</h3>
         <p>Modéliser les structures de données</p>
         <ph3>Database Designer</h3>
@@ -35,6 +36,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         <h3>Cinematic Designer</h3>
         <p>Modéliser vos IHM</p>
         </div>
+    </div>
 
     </div>
 </section>
