--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -33,7 +33,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             <div class="col-md-6 text-left">
                 <h3>Entity Designer</h3>
                 <p>Modéliser les structures de données</p>
-                <ph3>Database Designer</h3>
+                <h3>Database Designer</h3>
                 <p>Modéliser une base de données relationnelle</p>
                 <h3>Cinematic Designer</h3>
                 <p>Modéliser vos IHM</p>
