--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -16,9 +16,9 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" class="text-center" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
+<section id="" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
     <div class="container">
-        <div class="row">
+        <div class="row" class="text-center">
             <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
         </div>
         <div class="row">
