--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -17,7 +17,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 </section>
 
 <section id="" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
-    <div class="container class="banner">
+    <div class="container banner">
         <div class="row" class="text-center">
             <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
         </div>
