--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -16,8 +16,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
-    <div class="container banner">
+<section class="banner" id="" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
+    <div class="container">
         <div class="row" class="text-center">
             <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
         </div>
