--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -17,6 +17,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 </section>
 
 <section class="banner" id="" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
+    <p>test</p>
     <div class="container">
         <div class="row" class="text-center">
             <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
