--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -16,22 +16,19 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section class="banner" id="" style="height:500px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
-    <p>test</p>
-    <div class="container">
-        <div class="row" class="text-center">
+<section class="banner" id="" style="height:450px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
+    <div class="container text-center">
             <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
-        </div>
         <div class="row">
-            <div class="col-md-6 text-left">
+            <div class="col-md-6" >
                 <h3>Requirements Designer</h3
                 <p>Modéliser les exigences liées à l’application</p>
                 <h3>Graal Designer</h3>
-                <p>Modéliser les besoins utilisateurs</p> 
+                <p>Modéliser les besoins utilisateurs</p>
                 <h3>SOA Designer</h3>
                 <p>Modéliser les interfaces de composants applicatifs</p>
             </div>
-            <div class="col-md-6 text-left">
+            <div class="col-md-6" >
                 <h3>Entity Designer</h3>
                 <p>Modéliser les structures de données</p>
                 <h3>Database Designer</h3>
@@ -39,6 +36,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                 <h3>Cinematic Designer</h3>
                 <p>Modéliser vos IHM</p>
             </div>
+        </div>
     </div>
 
     </div>
