--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -18,9 +18,9 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 
 <section class="banner" id="" style="height:450px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
     <div class="container text-center">
-            <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
+            <h2 class="banner">UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
         <div class="row">
-            <div class="col-md-6" >
+            <div class="col-md-6" class="banner">
                 <h3>Requirements Designer</h3
                 <p>Modéliser les exigences liées à l’application</p>
                 <h3>Graal Designer</h3>
@@ -28,7 +28,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                 <h3>SOA Designer</h3>
                 <p>Modéliser les interfaces de composants applicatifs</p>
             </div>
-            <div class="col-md-6" >
+            <div class="col-md-6" class="banner">
                 <h3>Entity Designer</h3>
                 <p>Modéliser les structures de données</p>
                 <h3>Database Designer</h3>
