--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -18,22 +18,22 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 
 <section id="" style="color:#FFF; height:450px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
     <div class="container text-center">
-            <h2>UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
+            <h2 style="color:#FFF">UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
         <div class="row">
             <div class="col-md-6">
-                <h3>Requirements Designer</h3>
+                <h3 style="color:#FFF">Requirements Designer</h3>
                 <p>Modéliser les exigences liées à l’application</p>
-                <h3>Graal Designer</h3>
+                <h3 style="color:#FFF">Graal Designer</h3>
                 <p>Modéliser les besoins utilisateurs</p>
-                <h3>SOA Designer</h3>
+                <h3 style="color:#FFF">SOA Designer</h3>
                 <p>Modéliser les interfaces de composants applicatifs</p>
             </div>
             <div class="col-md-6">
-                <h3>Entity Designer</h3>
-                <p>Modéliser les structures de données</p>
-                <h3>Database Designer</h3>
+                <h3 style="color:#FFF">Entity Designer</h3>
+                <p >Modéliser les structures de données</p>
+                <h3 style="color:#FFF">Database Designer</h3>
                 <p>Modéliser une base de données relationnelle</p>
-                <h3>Cinematic Designer</h3>
+                <h3 style="color:#FFF">Cinematic Designer</h3>
                 <p>Modéliser vos IHM</p>
             </div>
         </div>
