--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -28,12 +28,12 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                 <h3 style="color:#FFF">SOA Designer</h3>
                 <p>Modéliser les interfaces de composants applicatifs</p>
             </div>
-            <div class="col-md-6">
-                <h3 style="color:#FFF">Entity Designer</h3>
-                <p >Modéliser les structures de données</p>
-                <h3 style="color:#FFF">Database Designer</h3>
-                <p>Modéliser une base de données relationnelle</p>
-                <h3 style="color:#FFF">Cinematic Designer</h3>
+            <div class="col-md-6" class="banner">
+                <h3>Entity Designer</h3>
+                <p >Modéliser les structures de données</p><br>
+                <h3>Database Designer</h3>
+                <p>Modéliser une base de données relationnelle</p><br>
+                <h3>Cinematic Designer</h3>
                 <p>Modéliser vos IHM</p>
             </div>
         </div>
