--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -28,7 +28,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                 <h3 style="color:#FFF">SOA Designer</h3>
                 <p>Modéliser les interfaces de composants applicatifs</p>
             </div>
-            <div class="col-md-6" class="banner">
+            <div class="col-md-6 banner">
                 <h3>Entity Designer</h3>
                 <p >Modéliser les structures de données</p><br>
                 <h3>Database Designer</h3>
