--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -16,24 +16,24 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" style="color:#FFF; height:450px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
+<section id="" style="height:450px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
     <div class="container text-center">
-            <h2 style="color:#FFF">UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
-        <div class="row">
+            <h2 class="banner">UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
+        <div class="row banner">
             <div class="col-md-6">
-                <h3 style="color:#FFF">Requirements Designer</h3>
+                <h3 class="banner">Requirements Designer</h3>
                 <p>Modéliser les exigences liées à l’application</p>
-                <h3 style="color:#FFF">Graal Designer</h3>
+                <h3 class="banner">Graal Designer</h3>
                 <p>Modéliser les besoins utilisateurs</p>
-                <h3 style="color:#FFF">SOA Designer</h3>
+                <h3 class="banner">SOA Designer</h3>
                 <p>Modéliser les interfaces de composants applicatifs</p>
             </div>
-            <div class="col-md-6 banner">
-                <h3>Entity Designer</h3>
+            <div class="col-md-6">
+                <h3 class="banner">Entity Designer</h3>
                 <p >Modéliser les structures de données</p><br>
-                <h3>Database Designer</h3>
+                <h3 class="banner">Database Designer</h3>
                 <p>Modéliser une base de données relationnelle</p><br>
-                <h3>Cinematic Designer</h3>
+                <h3 class="banner">Cinematic Designer</h3>
                 <p>Modéliser vos IHM</p>
             </div>
         </div>
