--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -22,9 +22,9 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         <div class="row banner">
             <div class="col-md-6">
                 <h3 class="banner">Requirements Designer</h3>
-                <p>Modéliser les exigences liées à l’application</p>
+                <p>Modéliser les exigences liées à l’application</p><br>
                 <h3 class="banner">Graal Designer</h3>
-                <p>Modéliser les besoins utilisateurs</p>
+                <p>Modéliser les besoins utilisateurs</p><br>
                 <h3 class="banner">SOA Designer</h3>
                 <p>Modéliser les interfaces de composants applicatifs</p>
             </div>
