--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -3,7 +3,7 @@ layout: isdesigner_default
 title: Information System Designer | Fonctionnalités - Vue d'ensemble
 ---
 
-<section id="" class="text-center">
+<section id="" class="text-center" style="padding-top: 80px">
     <div class="container">
             {% include block_heading.html
                 title="Fonctionnalités"                
