--- a/cinematic.html
+++ b/cinematic.html
@@ -36,7 +36,7 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
             col="3"
             icon_name="far fa-file-alt"
             icon_color="txt_indigo"
-            title="Approche visuelle et innovante XXX"
+            title="Approche visuelle et innovante"
             desc="Une schéma vaut mieux qu'un long discours : les diagrammes permettent de mieux réfléchir en restant focalisé sur l'essentiel."
             href=""
             target="_blank"
@@ -73,7 +73,9 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
         {% include block_text_image.html
             txt_order="order-1"
             title="Modéliser les états d'une application"
-            desc="<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>"
+            desc="<p>La représentation graphique des fonctionnalités de l’application associées aux interactions des utilisateurs permet de structurer et de faciliter la phase de conception d’interfaces homme-machine.</p>
+                <p>Avec Cinematic Designer, vous pouvez définir facilement les états d’une application et les conditions nécessaires aux changements d’états afin de décrire des scénarios d’utilisations complets.</p>
+                <p>Des états peuvent êtres agrégés en régions afin de séparer les états de l’application en catégories bien définies.</p>"
 
             lnk_txt=""
             lnk_href=""
@@ -92,7 +94,9 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
         {% include block_text_image.html
             txt_order="order-2"
             title="Modéliser un enchaînement d'écrans"
-            desc="<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>"
+            desc="<p>Cinematic Designer vous permet de représenter les enchaînements d’écrans de votre application en prenant en considération les actions des utilisateurs, et l’état de votre système.</p>
+                <p>Les structures de vos écrans peuvent être intégrés à cette représentation afin de faciliter la spécification des événements déclencheurs. Chaque enchaînement d’écran peut-être intégré aux différents états de votre application, et réutilisé entre-eux.</p>
+                <p>Les actions utilisateur sont définies en fonction de la technologie d’IHM désirée (SWT, jFace, HTML, …), permettant ainsi à Cinematic Designer d’être utilisé comme point d’entrée de générateurs d’interfaces graphiques.</p>"
 
             lnk_txt=""
             lnk_href=""
@@ -111,7 +115,9 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
         {% include block_text_image.html
             txt_order="order-1"
             title="Modéliser la structure d'un écran"
-            desc="<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>"
+            desc="<p>Avec Cinematic Designer, vous pouvez créer les maquettes des écrans votre application. Vous pouvez rapidement prototyper votre interface, en ajoutant et supprimant des éléments afin de vous permettre de trouver une présentation optimale en fonction de vos besoins.</p>
+                <p>Cinematic Designer assiste l’utilisateur afin de placer ses éléments sur la maquette plus efficacement par un système de guides, et met à disposition un générateur de “layout” pouvant indiquer aux développeurs une hiérarchie de composants graphiques à implémenter.</p>
+                <p>Les visuels disponibles sont entièrement customisables afin de pouvoir s’adapter à votre charte graphique, et Cinematic Designer propose un outil dédié afin d’ajouter facilement de nouveaux widgets (boutons, zones de saisie, …) qui seraient manquants.</p>"
 
             lnk_txt=""
             lnk_href=""
