--- a/cinematic.html
+++ b/cinematic.html
@@ -21,7 +21,7 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
             desc=""
         %}
 
-    <div class="row">
+  <!--  <div class="row">
         {% include block_cols.html
             col="3"
             icon_name="far fa-file-alt"
@@ -67,6 +67,7 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
     </div>
     </div>
 </section>
+-->
 
 <section id="">
     <div class="container">
