--- a/graal-designer.html
+++ b/graal-designer.html
@@ -13,7 +13,7 @@ title: Information System Designer | Fonctionnalités - Graal Designer
     </div>
 </section>
 
-<section id="" class="bg_lightest_grey text-center">
+<!-- <section id="" class="bg_lightest_grey text-center">
     <div class="container">
         {% include block_heading.html
             title=""                
@@ -21,7 +21,7 @@ title: Information System Designer | Fonctionnalités - Graal Designer
             desc=""
         %}
 
-<!--    <div class="row">
+    <div class="row">
         {% include block_cols.html
             col="3"
             icon_name="far fa-file-alt"
