Add copyright Obeo

--- a/index.html
+++ b/index.html
@@ -182,3 +182,5 @@ title: Information System Designer | Home
         </div>
     </div>       
 </section>
+
+<div><p>Copyright 2021 - <a href="https://www.obeosoft.com/fr/">Obeo</a></p></div>
