Improve copyright style

--- a/index.html
+++ b/index.html
@@ -183,4 +183,8 @@ title: Information System Designer | Home
     </div>       
 </section>
 
-<div><p>Copyright 2021 - <a href="https://www.obeosoft.com/fr/">Obeo</a></p></div>
+<section class="bg_lightest_grey text-center">
+    <div class="container">
+        <p>Copyright 2021 - <a href="https://www.obeosoft.com/fr/">Obeo</a></p>
+    </div>
+</section>
