--- a/cinematic-designer.html
+++ b/cinematic-designer.html
@@ -7,67 +7,11 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
     <div class="container">
             {% include block_heading.html
                 title="Cinematic Designer"
-                sub_title="Lorem Ipsum"
-                desc="Lorem Ipsum"
+                sub_title="Modéliser vos IHMs"
+                desc="Modéliser vos IHMs"
             %}
     </div>
 </section>
-
-<!-- <section id="" class="bg_lightest_grey text-center">
-    <div class="container">
-        {% include block_heading.html
-            title=""
-            sub_title=""
-            desc=""
-        %}
-
-    <div class="row">
-        {% include block_cols.html
-            col="3"
-            icon_name="far fa-file-alt"
-            icon_color="txt_indigo"
-            title="Meilleure réponse aux besoins utilisateurs"
-            desc="Une <a href=\"\">analyse métier</a> plus efficace permet de produire une application en phase avec les attentes des utilisateurs"
-            href=""
-            link_txt=""
-            href_icon=""
-        %}
-        {% include block_cols.html
-            col="3"
-            icon_name="far fa-file-alt"
-            icon_color="txt_indigo"
-            title="Approche visuelle et innovante"
-            desc="Une schéma vaut mieux qu'un long discours : les diagrammes permettent de mieux réfléchir en restant focalisé sur l'essentiel."
-            href=""
-            target="_blank"
-            link_txt=""
-            href_icon=""
-        %}
-        {% include block_cols.html
-            col="3"
-            icon_name="far fa-file-alt"
-            icon_color="txt_indigo"
-            title="Spécifications précises et fiables"
-            desc="A chaque sprint, les user stories sont actualisées dans un format structuré pour une meilleure maîtrise des spécifications"
-            href=""
-            target="_blank"
-            link_txt=""
-            href_icon=""
-        %}
-        {% include block_cols.html
-            col="3"
-            icon_name="far fa-file-alt"
-            icon_color="txt_indigo"
-            title="Collaboration entre analystes et concepteurs"
-            desc="Les analystes métiers et les concepteurs (front-end et back-end) collaborent sur une vision partagée de l’application"
-            href="http://www.eclipse.org/sirius/doc/"
-            link_txt=""
-            href_icon=""
-        %}
-    </div>
-    </div>
-</section>
--->
 
 <section id="">
     <div class="container">
