--- a/cinematic-designer.html
+++ b/cinematic-designer.html
@@ -8,7 +8,7 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
             {% include block_heading.html
                 title="Cinematic Designer"
                 sub_title="Modéliser vos IHMs"
-                desc="Modéliser vos IHMs"
+                desc="Cinematic Designer permet de décrire l'enchaînement ainsi que la structure des écrans d'une application."
             %}
     </div>
 </section>
