--- a/graal-designer.html
+++ b/graal-designer.html
@@ -61,7 +61,7 @@ title: Information System Designer | Fonctionnalités - Graal Designer
             title="Modéliser les interactions système/utilisateur"                
             desc="<p>Graal Designer permet la représentation des échanges entre les utilisateurs et les différents composants du système. Vous pouvez ainsi représenter les messages transitants dans le systèmes, entre ses composants mais aussi entre ses acteurs.</p>
                 <p>Des scénarios d’utilisations avancés prenant en compte parallélisme, synchronisation, ainsi que la création et la destruction d’entités du système peuvent être spécifiés. </p>
-                <p>Graal Designer peut ainsi être associé aux autres designers présents dans le studio, permettant ainsi une liaison entre les différentes couches de votre application.</p>        
+                <p>Graal Designer peut ainsi être associé aux autres designers présents dans le studio, permettant ainsi une liaison entre les différentes couches de votre application.</p>"        
             lnk_txt=""
             lnk_href=""
             lnk_target=""
