--- a/soa-designer.html
+++ b/soa-designer.html
@@ -6,7 +6,7 @@ title: Information System Designer | Fonctionnalités - Service Oriented Archite
 <section id="" class="text-center">
     <div class="container">
             {% include block_heading.html
-                title="Service Oriented Architecture Designer"                
+                title="SOA Designer"                
                 sub_title="Modéliser les interfaces des composants et des services"
                 desc="SOA Designer permet de modéliser la façon dont les composants d'une application sont liés entre eux, au travers d'interfaces de services."
             %}
