--- a/entity-designer.html
+++ b/entity-designer.html
@@ -50,7 +50,7 @@ title: Information System Designer | Fonctionnalités - Entity Designer
             lnk_icon=""
 
             img_order="order-1"
-            img_src="images/screenshots/entity/mapping_metier.png"
+            img_src="images/screenshots/entity/mapping_metier.gif"
             img_title="Mapping entre objets métiers et entités de données"
         %}
     </div>
