--- a/requirements-designer.html
+++ b/requirements-designer.html
@@ -48,7 +48,7 @@ title: Information System Designer | Fonctionnalités - Requirements Designer
             lnk_icon=""
 
             img_order="order-1"
-            img_src="images/screenshots/requirements/requirement_trace.png.gif"
+            img_src="images/screenshots/requirements/requirement_trace.png"
             img_title="Liens entre exigences et composants"
         %}
     </div>
