--- a/solutions.html
+++ b/solutions.html
@@ -10,7 +10,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                 sub_title="Identifier les besoins des utilisateurs et concevoir la solution"
                 desc="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux <a href=\"\">analystes métier</a> et aux concepteurs applicatifs (<a href=\"\">front-end</a> et <a href=\"\">back-end</a>).  Elle leur permet de spécifier ensemble l’application à développer et de mieux la partager avec les <a href=\"\">architectes applicatifs</a>, les <a href=\"\">développeurs</a> et les <a href=\"\">Ops</a> en charge du déploiement."
 
-                img_src="images/illustrations/sirius-overview.png"
+                img_src="images/illustrations/solutions.png"
                 img_title="Information System Designer - What is Information System Designer?"
                 img_class=""
 
@@ -23,12 +23,18 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         {% include block_text_image.html
             txt_order="order-1"
             title="Analyse Métier"                
-            desc="<p>Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :<ul><li>Formaliser les exigences</li><li>Spécifier les cas d’utilisation</li><li>Identifier les entités métier</li><li>Maquetter les IHM</li></ul></p><p>Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement.</p>"
+            desc="<p>Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :
+        <ul>
+            <li>Formaliser les exigences</li>
+            <li>Spécifier les cas d’utilisation</li>
+            <li>Identifier les entités métier</li>
+        </ul></p>
+    <p>Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement.</p>"
         
-            lnk_txt="En savoir plus"
+            lnk_txt=""
             lnk_href=""
-            lnk_target="blank"
-            lnk_icon="fas fa-arrow-alt-circle-right"
+            lnk_target=""
+            lnk_icon=""
 
             img_order="order-2"
             img_src="images/illustrations/sirius-overview.png"
@@ -42,12 +48,17 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         {% include block_text_image.html
             txt_order="order-2"
             title="Conception Front-end"                
-            desc="<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>"
+            desc="<p>Information System Designer permet aux concepteurs front-end d'avoir une vision globale de l'application à développer pour pouvoir définir graphiquement les écrans à développer :<
+        <ul>
+        <li>maquettage</li>
+        <li>dynamique d'enchaînement<li>
+        <li>données manipulées</li>
+        </ul></p>"
         
-            lnk_txt="En savoir plus"
+            lnk_txt=""
             lnk_href=""
-            lnk_target="blank"
-            lnk_icon="fas fa-arrow-alt-circle-right"
+            lnk_target=""
+            lnk_icon=""
 
             img_order="order-1"
             img_src="images/illustrations/sirius-overview.png"
