--- a/solutions.html
+++ b/solutions.html
@@ -51,7 +51,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             desc="<p>Information System Designer permet aux concepteurs front-end d'avoir une vision globale de l'application à développer pour pouvoir définir graphiquement les écrans à développer :<
         <ul>
         <li>maquettage</li>
-        <li>dynamique d'enchaînement<li>
+        <li>dynamique d'enchaînement</li>
         <li>données manipulées</li>
         </ul></p>"
         
