--- a/solutions.html
+++ b/solutions.html
@@ -48,7 +48,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         {% include block_text_image.html
             txt_order="order-2"
             title="Conception Front-end"                
-            desc="<p>Information System Designer permet aux concepteurs front-end d'avoir une vision globale de l'application à développer pour pouvoir définir graphiquement les écrans à développer :<
+            desc="<p>Information System Designer permet aux concepteurs front-end d'avoir une vision globale de l'application à développer pour pouvoir définir graphiquement les écrans à développer :
         <ul>
         <li>maquettage</li>
         <li>dynamique d'enchaînement</li>
