--- a/solutions.html
+++ b/solutions.html
@@ -18,6 +18,48 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
+
+
+            <div class="row">
+                {% include block_cols.html
+                    col="4"
+                    icon_name="fas fa-users"
+                    icon_color="txt_indigo"
+                    title="Analyste Métier" 
+                    desc="<p>Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :
+        <ul>
+            <li>Formaliser les exigences</li>
+            <li>Spécifier les cas d’utilisation</li>
+            <li>Identifier les entités métier</li>
+        </ul></p>
+    <p>Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement.</p>"
+                %}
+                {% include block_cols.html
+                    col="4"
+                    icon_name="fas fa-desktop"
+                    icon_color="txt_indigo"
+                    title="Concepteur Front-End" 
+                    desc="<p>Information System Designer permet aux concepteurs front-end d'avoir une vision globale de l'application à développer pour pouvoir définir graphiquement les écrans à développer :
+        <ul>
+        <li>maquettage</li>
+        <li>dynamique d'enchaînement</li>
+        <li>données manipulées</li>
+        </ul></p>"
+                %}
+                {% include block_cols.html
+                    col="4"
+                    icon_name="fas fa-server"
+                    icon_color="txt_indigo"
+                    title="Concepteur Back-End" 
+                    desc="Définir les services applicatifs, les objets métiers et la base de données"
+                %}
+            </div>
+
+
+
+
+
+
 <section id="" class="">
     <div class="container">
         {% include block_text_image.html
