--- a/solutions.html
+++ b/solutions.html
@@ -18,7 +18,13 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-
+<section id="" class="bg_lightest_grey text-center">
+    <div class="container">
+            {% include block_heading.html
+                title="Atelier unique"                
+                sub_title=""
+                desc=""
+            %}
 
             <div class="row">
                 {% include block_cols.html
@@ -55,7 +61,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                 %}
             </div>
 
-
+        </div>
+    </section>
 
 
 
