--- a/solutions.html
+++ b/solutions.html
@@ -45,11 +45,12 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                     icon_name="fas fa-desktop"
                     icon_color="txt_indigo"
                     title="Concepteur Front-End" 
-                    desc="<p>Information System Designer permet aux concepteurs front-end d'avoir une vision globale de l'application à développer pour pouvoir définir graphiquement les écrans à développer :
+                    desc="<p>Information System Designer offre aux concepteurs front-end une vision globale de l'application à développer, et leur permet de spécifier graphiquement les écrans à développer :
         <ul>
         <li>maquettage</li>
         <li>dynamique d'enchaînement</li>
         <li>données manipulées</li>
+        <li>interactions avec le back-end</li>
         </ul></p>"
                 %}
                 {% include block_cols.html
@@ -97,11 +98,12 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         {% include block_text_image.html
             txt_order="order-2"
             title="Conception Front-end"                
-            desc="<p>Information System Designer permet aux concepteurs front-end d'avoir une vision globale de l'application à développer pour pouvoir définir graphiquement les écrans à développer :
+            desc="<p>Information System Designer offre aux concepteurs front-end une vision globale de l'application à développer, et leur permet de spécifier graphiquement les écrans à développer :
         <ul>
         <li>maquettage</li>
         <li>dynamique d'enchaînement</li>
         <li>données manipulées</li>
+        <li>interactions avec le back-end</li>
         </ul></p>"
         
             lnk_txt=""
@@ -121,7 +123,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         {% include block_text_image.html
             txt_order="order-1"
             title="Conception Back-end"                
-            desc="<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>"
+            desc="<p>Information System Designer permet aux concepteurs back-end de définir une architecture de services applicatifs réutilisables, ainsi que les objets métiers et les bases de données correspondantes.</p>
+            <p>Les applications et bases de données existantes peuvent être facilement rétro-modélisées pour faciliter l'intégration de la nouvelle application."
         
             lnk_txt="En savoir plus"
             lnk_href=""
