--- a/solutions.html
+++ b/solutions.html
@@ -32,12 +32,10 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                     icon_name="fas fa-users"
                     icon_color="txt_indigo"
                     title="Analyste Métier" 
-                    desc="<p>Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :
-        <ul>
-            <li>Formaliser les exigences</li>
-            <li>Spécifier les cas d’utilisation</li>
-            <li>Identifier les entités métier</li>
-        </ul></p>
+                    desc="<p>Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :<br>
+       - Formaliser les exigences<br>
+       - Spécifier les cas d’utilisation<br>
+       - Identifier les entités métier</p>
     <p>Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement.</p>"
                 %}
                 {% include block_cols.html
@@ -45,13 +43,11 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
                     icon_name="fas fa-desktop"
                     icon_color="txt_indigo"
                     title="Concepteur Front-End" 
-                    desc="<p>Information System Designer offre aux concepteurs front-end une vision globale de l'application à développer, et leur permet de spécifier graphiquement les écrans à développer :
-        <ul>
-        <li>maquettage</li>
-        <li>dynamique d'enchaînement</li>
-        <li>données manipulées</li>
-        <li>interactions avec le back-end</li>
-        </ul></p>"
+                    desc="<p>Information System Designer offre aux concepteurs front-end une vision globale de l'application à développer, et leur permet de spécifier graphiquement les écrans à développer :<br>
+        - Maquettage<br>
+        - Dynamique d'enchaînement<br>
+        - Données manipulées<br>
+        - Interactions avec le back-end</p>"
                 %}
                 {% include block_cols.html
                     col="4"
