Improve modelers pages

--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -3,7 +3,7 @@ layout: isdesigner_default
 title: Information System Designer | Fonctionnalités - Vue d'ensemble
 ---
 
-<section id="" class="text-center" style="padding-top: 80px">
+<section class="text-center">
     <div class="container">
             {% include block_heading.html
                 title="Fonctionnalités"                
@@ -16,33 +16,49 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" style="height:450px; margin: 0px auto; background-image: url('images/banners/banner_modelers.jpg');">
-    <div class="container text-center">
-            <h2 class="banner">UN MODELEUR POUR CHAQUE ÉTAPE DE VOTRE PROJET</h2>
-        <div class="row banner">
-            <div class="col-md-6">
-                <h3 class="banner">Requirements Designer</h3>
-                <p>Modéliser les exigences liées à l’application</p><br>
-                <h3 class="banner">Graal Designer</h3>
-                <p>Modéliser les besoins utilisateurs</p><br>
-                <h3 class="banner">SOA Designer</h3>
-                <p>Modéliser les interfaces de composants applicatifs</p>
+<div class="card banner bg-dark text-white text-center">
+    <img src="images/banners/banner_features.jpg" class="card-img" alt="Fonctionnalités">
+    <div class="container card-img-overlay">
+        <section>
+        {% include block_heading.html
+            title="Un modeleur pour chaque étape de votre projet"
+            sub_title=""
+            desc=""
+        %}
+        <div class="row">
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".05s">
+                <h3>Requirements Designer</h3>
+                <p><a href="requirements-designer.html">Modéliser les exigences liées à l’application <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
             </div>
-            <div class="col-md-6">
-                <h3 class="banner">Entity Designer</h3>
-                <p >Modéliser les structures de données</p><br>
-                <h3 class="banner">Database Designer</h3>
-                <p>Modéliser une base de données relationnelle</p><br>
-                <h3 class="banner">Cinematic Designer</h3>
-                <p>Modéliser vos IHM</p>
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".09s">
+                <h3>Graal Designer</h3>
+                <p><a href="graal-designer.html">Modéliser les besoins utilisateurs <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
+            </div>
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".11s">
+                <h3>SOA Designer</h3>
+                <p><a href="soa-designer.html">Modéliser les interfaces de composants applicatifs <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".05s">
+                <h3>Entity Designer</h3>
+                <p><a href="entity-designer.html">Modéliser les structures de données <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
+            </div>
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".09s">
+                <h3>Database Designer</h3>
+                <p><a href="database-designer.html">Modéliser une base de données relationnelle <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
+            </div>
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".11s">
+                <h3>Cinematic Designer</h3>
+                <p><a href="cinematic-designer.html">Modéliser vos IHMs <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
+            </div>
+        </div>
+    </section>
     </div>
-
     </div>
-</section>
+</div>
 
-<section id=""  class="bg_lightest_grey">
+<section class="bg_lightest_grey">
     <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
@@ -63,7 +79,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" >
+<section  >
     <div class="container">
         {% include block_text_image.html
             txt_order="order-2"
@@ -87,7 +103,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" class="bg_lightest_grey">
+<section  class="bg_lightest_grey">
     <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
@@ -107,7 +123,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="">
+<section >
     <div class="container">
         {% include block_text_image.html
             txt_order="order-2"
@@ -115,7 +131,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
             desc="<p>&Agrave; partir des informations modélisées, il est également possible de générer une partie du code source deset des fichiers de configuration de l'application.</p>
             <p>Des générateurs prêts à l'emploi existent pour cibler le langage Java. Mais grâce à la technologie Acceleo sur laquelle s'appuie IS Designer, il est possible de définir vos propres templates pour produire automatiquent du code pour tout autre type de langage."
         
-            lnk_txt="Générateurs de code"
+            lnk_txt=""
             lnk_href=""
             lnk_target="blank"
             lnk_icon="fas fa-arrow-alt-circle-right"
@@ -127,7 +143,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" class="bg_lightest_grey">
+<section  class="bg_lightest_grey">
     <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
@@ -146,7 +162,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="">
+<section >
     <div class="container">
         {% include block_text_image.html
             txt_order="order-2"
@@ -165,7 +181,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
     </div>
 </section>
 
-<section id="" class="bg_lightest_grey">
+<section  class="bg_lightest_grey">
     <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
