--- a/requirements-designer.html
+++ b/requirements-designer.html
@@ -3,7 +3,7 @@ layout: isdesigner_default
 title: Information System Designer | Fonctionnalités - Requirements Designer
 ---
 
-<section id="" class="text-center">
+<section class="bg_lightest_grey text-center">
     <div class="container">
             {% include block_heading.html
                 title="Requirements Designer"                
@@ -14,7 +14,7 @@ title: Information System Designer | Fonctionnalités - Requirements Designer
 </section>
 
 
-<section id="">
+<section>
     <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
@@ -34,7 +34,7 @@ title: Information System Designer | Fonctionnalités - Requirements Designer
     </div>
 </section>
 
-<section id="">
+<section>
     <div class="container">
         {% include block_text_image.html
             txt_order="order-2"
@@ -53,3 +53,63 @@ title: Information System Designer | Fonctionnalités - Requirements Designer
         %}
     </div>
 </section>
+
+<section class="bg_lightest_grey text-center">
+    <div class="container">
+        {% include block_heading.html
+            title="Ressources pour démarrer"
+            sub_title=""
+            desc=""
+        %}
+            <div class="row">
+                {% include block_cols.html
+                    col="4 offset-md-2"
+                    icon_name="far fa-file-alt"
+                    icon_color="txt_indigo"
+                    title="Documentation" 
+                    desc=""
+                    href="https://github.com/ObeoNetwork/InformationSystem/wiki/Obeo-Network---Requirements-tooling"
+                    link_txt="Learn more"
+                    href_icon="fas fa-arrow-alt-circle-right"
+                %}
+                {% include block_cols.html
+                    col="4"
+                    icon_name="far fa-file-alt"
+                    icon_color="txt_indigo"
+                    title="Téléchargement" 
+                    desc=""
+                    href="https://github.com/ObeoNetwork/InformationSystem/releases"
+                    link_txt="Learn more"
+                    href_icon="fas fa-arrow-alt-circle-right"
+                %}
+            </div>
+    </div>       
+</section>
+
+<!-- <div class="card banner bg-dark text-white text-center">
+    <img src="images/banners/banner_features.jpg" class="card-img" alt="Fonctionnalités">
+    <div class="container card-img-overlay">
+        <section>
+        {% include block_heading.html
+            title="Voir aussi"
+            sub_title=""
+            desc=""
+        %}
+        <div class="row">
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".05s">
+                <h3>Requirements Designer</h3>
+                <p><a href="requirements-designer.html">Modéliser les exigences liées à l’application <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
+            </div>
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".09s">
+                <h3>Graal Designer</h3>
+                <p><a href="graal-designer.html">Modéliser les besoins utilisateurs <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
+            </div>
+            <div class="col-md-4 wow fadeInLeft" data-wow-delay=".11s">
+                <h3>SOA Designer</h3>
+                <p><a href="soa-designer.html">Modéliser les interfaces de composants applicatifs <i class="fa fa-external-link" aria-hidden="true"></i></a></p> 
+            </div>
+        </div>
+    </section>
+    </div>
+    </div>
+</div> -->
