--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: isdesigner_default
 title: Information System Designer | Home
 ---
 
-<section id="intro" class="">
+<section id="intro">
     <div class="container">
         <div class="row align-items-end">
             {% include section_intro.html
@@ -26,7 +26,7 @@ title: Information System Designer | Home
     </div>
 </section>
 
-<section id="" class="bg_lightest_grey text-center">
+<section class="bg_lightest_grey text-center">
     <div class="container">
             {% include block_heading.html
                 title="Atelier unique"                
@@ -61,7 +61,7 @@ title: Information System Designer | Home
 </section>
 
 
-<section id="complexity_management">
+<section>
     <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
@@ -88,7 +88,7 @@ title: Information System Designer | Home
     </div>
 </section>
 
-<section id="" class="bg_lightest_grey text-center">
+<section class="bg_lightest_grey text-center">
     <div class="container">
         {% include block_heading.html
             title="Approche Low-Code"                
@@ -143,7 +143,7 @@ title: Information System Designer | Home
     </div>
 </section>
 
-<section id="" class="text-center">
+<section class="text-center">
     <div class="container">
         {% include block_heading.html
             title="Open-Source"
