--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -133,8 +133,8 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
         
             lnk_txt=""
             lnk_href=""
-            lnk_target="blank"
-            lnk_icon="fas fa-arrow-alt-circle-right"
+            lnk_target=""
+            lnk_icon=""
 
             img_order="order-1"
             img_src="images/illustrations/acceleo_overview.png"
