--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: isdesigner_default
-title: Information System Designer | Home
+title: Information System Designer | Accueil
 ---
 
 <section id="intro">
@@ -13,14 +13,14 @@ title: Information System Designer | Home
                 href_1="https://github.com/ObeoNetwork/InformationSystem/releases"
                 btn_txt_1="C'est parti"
                 target_1="self"
-                href_2="https://github.com/ObeoNetwork/InformationSystem/wiki"      
+                href_2="fonctionnalites.html"      
                 btn_txt_2="Fonctionnalités"
                 target_2="self"      
                 
-                img_href="overview.html"
+                img_href="fonctionnalites.html"
                 img_target="self"
                 img_src="images/illustrations/sirius-overview.png"
-                img_alt="Some text"
+                img_alt="Information System Designer"
             %}
         </div>
     </div>
